trying fix valign

--- a/src/pages/product.scss
+++ b/src/pages/product.scss
@@ -10,7 +10,7 @@
 }
 
 .ant-modal {
-
+    vertical-align: bottom!important;
     max-width: 100vw;
 }
 
